force-app/main/default/objects/Products__c/Products__c.object-meta.xml
<CustomObject>
    <description>Custom Object Products</description>
    <label>Products</label>
    <nameField>
        <label>Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>