force-app/main/default/objects/Products__c/fields/Product_Brands__c.field-meta.xml
<CustomField>
    <fullName>Product_Brands__c</fullName>
    <label>Product Brands</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Personal Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>