force-app/main/default/objects/Products__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annapurna</fullName>
            </value>
            <value>
                <fullName>Brooke Bond</fullName>
            </value>
            <value>
                <fullName>Kissan</fullName>
            </value>
            <value>
                <fullName>Lipton</fullName>
            </value>
            <value>
                <fullName>Knorr</fullName>
            </value>
            <value>
                <fullName>Kwality Walls</fullName>
            </value>
            <value>
                <fullName>Spices</fullName>
            </value>
            <value>
                <fullName>Instant Mixes</fullName>
            </value>
            <value>
                <fullName>Biscuits</fullName>
            </value>
            <value>
                <fullName>Yipee</fullName>
            </value>
            <value>
                <fullName>B Natural</fullName>
            </value>
            <value>
                <fullName>CandyMan</fullName>
            </value>
            <value>
                <fullName>Farmland</fullName>
            </value>
            <value>
                <fullName>Fiama</fullName>
            </value>
            <value>
                <fullName>Vivel</fullName>
            </value>
            <value>
                <fullName>Engage</fullName>
            </value>
            <value>
                <fullName>Salvon</fullName>
            </value>
            <value>
                <fullName>WLS</fullName>
            </value>
            <value>
                <fullName>ClassMate</fullName>
            </value>
            <value>
                <fullName>PaperKraft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>