force-app/main/default/objects/Products__c/fields/Product_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Expired_Date__c</fullName>
    <label>Product Expired Date</label>
    <type>Date</type>
</CustomField>