force-app/main/default/objects/Products__c/fields/Product_Manufactured_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Manufactured_Date__c</fullName>
    <label>Product Manufactured Date</label>
    <type>Date</type>
</CustomField>